# CenterPoint-ROS-Detection-and-Tracking

./: CMakeLists.txt  README.md  main.cpp  package.xml
include/centerpoint/: centerpoint.h  centerpoint_detection.h  centerpoint_detection_and_tracking.h  kernel.h  postprocess.h  preprocess.h  timer.hpp
include/common/: transform.hpp
include/common/msgs/: autosense_msgs
include/common/types/: object.hpp  trackable_object.hpp  type.h
include/tracking/: base_tracking_worker.h  hm_tracking_worker.hpp
include/tracking/distances/: tracker_obsv_distance.hpp
include/tracking/filters/: robust_kalman_filter.h
include/tracking/trackers/: object_tracker.hpp
include/tracking_old/: base_filter.h  base_tracker_obsv_matcher.h  base_tracking_worker.h  common.h  hm_tracking_worker.h  multi_object_tracker.h  object.h  object_tracker.h  robust_kalman_filter.h  time.h  tracking_object.h  tracking_ukf.h  tracking_worker_manager.h  type.h  ukf.h
launch/: centerpoint_detection.launch  centerpoint_detection_and_tracking.launch
model/: rpn_centerhead_sim.plan
rviz/: detection.rviz  detection_and_tracking.rviz  nuscenes.rviz
src/: centerpoint.cpp  centerpoint_detection.cpp  centerpoint_detection_and_tracking.cpp  postprocess.cpp  postprocess_kernels.cu  preprocess.cpp  preprocess_kernels.cu  tensorrt.cpp
src/tracking/: hm_tracking_worker.cpp
src/tracking/distances/: tracker_obsv_distance.cpp
src/tracking/filters/: robust_kalman_filter.cpp
src/tracking/trackers/: object_tracker.cpp
src/tracking_old/: hm_tracking_worker.cpp  multi_object_tracker.cpp  object_tracker.cpp  ukf.cpp
