<?xml version="1.0"?>
<package format="2">
  <name>centerpoint_detection_and_tracking</name>
  <version>0.0.0</version>
  <description>The CenterPoint 3D detection package</description>

  <maintainer email="jiayansong@u.nus.edu">jiayansong</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf</depend>

</package>
